fix: page-content overflowed the window ...
and padding disappears when width gets less than breakpoint

--- a/_sass/layout/body.scss
+++ b/_sass/layout/body.scss
@@ -4,13 +4,13 @@ body {
 }
 
 .page-content {
+    padding: 0 60px;
     flex: auto;
 }
 
-@media (min-width: 800px) { // TEMP
+@media (min-width: 880px) { // TEMP
   .page-content {
     width: 880px;
-    padding: 0 60px;
     margin: 0 auto;
   }
 }
