--- a/_sass/layout/document.scss
+++ b/_sass/layout/document.scss
@@ -1,6 +1,4 @@
 .post {
-    overflow-x: auto;
-
     // TEMP
     table {
         tr:hover {
